css/style.css
/* ... */
.tab-wrapper {
    padding: 0;
    width: 435px;
    height: 70px;
    margin: 80px auto 30px auto;
}

#sidebar .tab-wrapper { width: 100% }

.tab-wrapper li {
    float: left;
    background: none !important;
    padding: 0 !important;
    margin: 0 1% 0 0 !important;
    width: 24%;
}

.tab-wrapper li:last-child {
    margin-right: 0px !important;
}

.tab-wrapper li a {
    display: block;
    height: 32px;
    text-align: center;
    line-height: 34px;
    margin: 0;
    outline: none;
    background: #f2f2f2;
    padding: 0;
    position: relative;
    font-family: 'ModernPictogramsNormal';
    -webkit-font-smoothing: antialiased;
    color: #555;
    font-size: 22px;
    text-transform: none;
}

.tab-wrapper li a.current {  }

.tab-wrapper li a:hover { }

.tab-wrapper li a:active i {
    line-height: 34px;
}

.tab-wrapper li i {
    font-size: 17px;
    line-height: 32px;
}

#sidebar .panes {
    width: 99%;
}

#sidebar .panes .pane {
    margin-top: 2px;
    background: #f7f7f7;
    padding: 15px !important;
}

.panes .pane {
    display: none;
    padding-top: 15px;
    margin-top: -1px;
}

.change-font a {
    text-transform: uppercase;
    font-size: 10px;
    color: #999;
    margin-right: 15px;
}

.change-font a:hover { color: #4c4c4c }

.chirp li {
    border-bottom: solid 1px #eee !important;
    padding-bottom: 10px !important;
    margin: 0 0 10px 0 !important;
    list-style-type: none !important;
}

.chirp li:last-child {
    border-bottom: none !important;
    margin-bottom: 0 !important;
    padding-bottom: 0 !important;
}

/* Styles for Student Profile - from desmond.css */

.ib_main_header {
  padding: 0;
  margin-top: 30px;
  font-size: 40px;
}

.student_pic {
  border-radius: 100px;
  -webkit-border-radius: 100px;
  -moz-border-radius: 100px;
  width: 140px;
  height: 140px;
  top: -212px;
  left: 41.07%;
  border: 2px solid white;
  margin-top: 205px;
}


.page-title, .top-page-title {
  /*background: url(../img/plaza_espana.jpg) no-repeat top center;*/
  margin-bottom: 0;
  padding: 0;
  height: 275px;
  text-align: bottom;
}

.page-title {
  position: relative;
  vertical-align:bottom;
}

.top-page-title {
  background: url(../img/j-collins-background.jpg) no-repeat top center;
  background-size: 100% 100%;
  margin-bottom: 100px;
  text-align: center;
}

.ib-social-icons {
  font-size: 40px;
  padding: 0 10px;
}

.social-icons {
  padding:20px 0;
}

.title-div {
  background: white;
  width: 500px;
  margin: 0 auto;
  position: relative;
  top: 20px;
}

.icon-twitter:hover {
  color: #06ADE8;
}

.icon-linkedin-sign:hover {
  color: #1F83B9;
}

.icon-github:hover {
  color: black;
}

.icon-edit:hover {
  color: #FFCC00;
}

.icon-rss:hover {
  color: #009933;
}

.link-subs {
  padding-top: 10px;
  margin: 0 auto;
  width: 980px;
  text-align: left;
  padding-bottom: 10px;
  border-bottom: solid 1px #eee;
  padding-left: 2px;
  padding-right: 2px;
}
.link-subs span{
  display: inline;
  font-size: 20px;
  font-weight: bold;
  color: #000;
}
.link-subs li{
  display: inline;
}

.link-subs ul {
  float: right;
  text-align: right;
  letter-spacing: 2px;
  font-size: 10px;
  text-transform: uppercase;
}
.link-subs ul li a{
  color: #aaa;
}
.link-subs ul a:hover {
  color: #37C5FD;
}

.section-testimonials-curriculum {
    padding-top: 40px;
    padding-bottom: 50px;
}

.quote-div {
  padding: 15px 0;
}

.testimonials h3 {
  font-size: 16px;
  line-height: 140%;
}

.section-title {
    letter-spacing: 5px;
    font-size: 40px;
    font-weight: bold;
    text-transform: uppercase;
    /*margin-bottom: 40px;*/
    text-align: center;
    padding: 30px;
    border-top: solid 1px #eee;
    border-bottom: solid 1px #eee;
}

.services h3 {
    font-size: 18px;
    font-weight: bold;
    line-height: 20px;
    margin-bottom: 0;
    text-align: center;
    width: 295px;
}

.services first-child {
    width: 100%;
    padding-top: none;
    border-top: none;
}

.services {
  width: 100%;
}

.go-to-top {
  text-align: right;
  font-size: 11px;
  letter-spacing: 1px;
}

.about-text {
  width: 500px;
  margin: 0 auto;
  padding-bottom: 20px;
}

.about-text p {
  font-size: 20px;
  line-height: 130%;
  border-top: none;

}

body.students a{color:#60BDDB} /*Causing the social icons to be blue*/

.top-page-title {
    background-size: 100% 100%;
    margin-bottom: 100px;
    text-align: center;
  }

  /*========================= Index Profile Image ================================*/

.prof-image {
  border-top: 1px solid #efefef;
  border-left: 1px solid #efefef;
  border-right: 1px solid #efefef;
  border-bottom: 0;
}

/*========================= Profile Background Image ================================*/

.top-page-title {
  background-size: 100% 100%;
  margin-bottom: 100px;
  text-align: center;
}

/*========================== Swiss Army Icon ============================*/

.swiss-knife-icon {
    display: inline-block;
    width: 20px;
    margin: 12px 5px 0 0;
}

/*========================== Smooth Scroller =========================*/

.smooth-scroller {
    padding-top: 20px;
}

